java/versioned_docs/version-1.14/api/class-download.mdx
---
id: class-download
title: "Download"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

[Download] objects are dispatched by page via the [Page.onDownload(handler)](./api/class-page.mdx#page-event-download) event.

All the downloaded files belonging to the browser context are deleted when the browser context is closed.

Download event is emitted once the download starts. Download path becomes available once download completes:

```java
// wait for download to start
Download download  = page.waitForDownload(() -> page.click("a"));
// wait for download to complete
Path path = download.path();
```

```java
// wait for download to start
Download download = page.waitForDownload(() -> {
  page.click("a");
});
// wait for download to complete
Path path = download.path();
```

:::note
Browser context **must** be created with the `acceptDownloads` set to `true` when user needs access to the downloaded content. If `acceptDownloads` is not set, download events are emitted, but the actual download is not performed and user has no access to the downloaded files.
:::


- [Download.cancel()](./api/class-download.mdx#download-cancel)
- [Download.createReadStream()](./api/class-download.mdx#download-create-read-stream)
- [Download.delete()](./api/class-download.mdx#download-delete)
- [Download.failure()](./api/class-download.mdx#download-failure)
- [Download.page()](./api/class-download.mdx#download-page)
- [Download.path()](./api/class-download.mdx#download-path)
- [Download.saveAs(path)](./api/class-download.mdx#download-save-as)
- [Download.suggestedFilename()](./api/class-download.mdx#download-suggested-filename)
- [Download.url()](./api/class-download.mdx#download-url)

## Download.cancel() {#download-cancel}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-cancel-return"/> &#60;[void]&#62;<a href="#download-cancel-return" class="list-anchor">#</a>

Cancels a download. Will not fail if the download is already finished or canceled. Upon successful cancellations, `download.failure()` would resolve to `'canceled'`.

## Download.createReadStream() {#download-create-read-stream}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-create-read-stream-return"/> &#60;[null]|[InputStream]&#62;<a href="#download-create-read-stream-return" class="list-anchor">#</a>

Returns readable stream for current download or `null` if download failed.

## Download.delete() {#download-delete}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-delete-return"/> &#60;[void]&#62;<a href="#download-delete-return" class="list-anchor">#</a>

Deletes the downloaded file. Will wait for the download to finish if necessary.

## Download.failure() {#download-failure}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-failure-return"/> &#60;[null]|[String]&#62;<a href="#download-failure-return" class="list-anchor">#</a>

Returns download error if any. Will wait for the download to finish if necessary.

## Download.page() {#download-page}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-page-return"/> &#60;[Page]&#62;<a href="#download-page-return" class="list-anchor">#</a>

Get the page that the download belongs to.

## Download.path() {#download-path}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-path-return"/> &#60;[null]|[Path]&#62;<a href="#download-path-return" class="list-anchor">#</a>

Returns path to the downloaded file in case of successful download. The method will wait for the download to finish if necessary. The method throws when connected remotely.

Note that the download's file name is a random GUID, use [Download.suggestedFilename()](./api/class-download.mdx#download-suggested-filename) to get suggested file name.

## Download.saveAs(path) {#download-save-as}
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-save-as-option-path"/> &#60;[Path]&#62; Path where the download should be copied.<a href="#download-save-as-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-save-as-return"/> &#60;[void]&#62;<a href="#download-save-as-return" class="list-anchor">#</a>

Copy the download to a user-specified path. It is safe to call this method while the download is still in progress. Will wait for the download to finish if necessary.

## Download.suggestedFilename() {#download-suggested-filename}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-suggested-filename-return"/> &#60;[String]&#62;<a href="#download-suggested-filename-return" class="list-anchor">#</a>

Returns suggested filename for this download. It is typically computed by the browser from the [`Content-Disposition`](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Disposition) response header or the `download` attribute. See the spec on [whatwg](https://html.spec.whatwg.org/#downloading-resources). Different browsers can use different logic for computing it.

## Download.url() {#download-url}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="download-url-return"/> &#60;[String]&#62;<a href="#download-url-return" class="list-anchor">#</a>

Returns downloaded url.

[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"
